Dodana ustreznejša hierarhija velikosti besedila

--- a/nadlogar/naloge/templates/naloge/najdi_vsiljivca.html
+++ b/nadlogar/naloge/templates/naloge/najdi_vsiljivca.html
@@ -1,4 +1,4 @@
-<p>{{ indeks }}. {{ naloga.navodila }}</p>
+<p class="uk-text-lead">{{ indeks }}. {{ naloga.navodila }}</p>
 <ul style="list-style-type: lower-alpha;">
     {% for primer in naloga.generiraj %}
         <li>
