Preimenovani dokumenti in dodana predloga za urejevalnik dokumentov

--- a/nadlogar/naloge/templates/testi/podrobnosti_dokumenta.html
+++ b/nadlogar/naloge/templates/testi/podrobnosti_dokumenta.html
@@ -3,7 +3,7 @@
 {% block naslov %}Test {{ test.naslov }}{% endblock %}
 
 {% block vsebina %}
-<div class="container mt-5">
+<div class="container">
 
     <h2>{{ test.naslov }}</h2>
     <p>{{ test.opis }}</p>
