--- a/nadlogar/naloge/templates/testi/seznam_dokumentov.html
+++ b/nadlogar/naloge/templates/testi/seznam_dokumentov.html
@@ -3,7 +3,7 @@
 {% block naslov %}Seznam testov{% endblock %}
 
 {% block vsebina %}
-<div class="container mt-5">
+<div class="container">
 
     <h2>Seznam testov</h2>
 
