--- a/nadlogar/naloge/templates/navigation.html
+++ b/nadlogar/naloge/templates/navigation.html
@@ -2,10 +2,16 @@
     <div class="container">
 
         <a class="navbar-brand d-flex order-md-1" id="nav-brand" href="/">
-            <div class="francek-logo-header">Delovni listi</div>
+            <div class="francek-logo-header">
+                <strong>Črkozmed</strong> - delovni listi
+            </div>
         </a>
 
-        <div class="navbar-collapse order-md-4 collapse show" id="navbar">
+        <button class="navbar-toggler order-md-3" id="nav-button" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="navbar-collapse order-md-4 collapse" id="navbar">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="{% url 'naloge:ustvari_delovni_list' %}">Nov delovni list</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'naloge:seznam_dokumentov' %}">Moji delovni listi</a></li>
