--- a/nadlogar/naloge/static/naloge/css/style.css
+++ b/nadlogar/naloge/static/naloge/css/style.css
@@ -21,6 +21,7 @@
 
 /* Prikaz naloge na strani */
 .naloga {
+    margin-top: 1rem;
     padding: 2em;
     background-color: white;
     border: 1px solid #ced4da;
