--- a/nadlogar/naloge/templates/testi/podrobnosti_dokumenta.html
+++ b/nadlogar/naloge/templates/testi/podrobnosti_dokumenta.html
@@ -7,22 +7,25 @@
 {% block vsebina %}
 <div class="container is-narrow">
 
-    <div class="d-flex justify-content-between align-items-center mb-3">
-        <h2>{{ delovni_list.naslov }}</h2>
-        <div>
-            <a class="btn btn-sm btn-primary" href="{% url 'naloge:urejanje_delovnega_lista' delovni_list.id %}">
-                <i class="material-icons material-icons-button">create</i>
-                Uredi
-            </a>
-            <a class="btn btn-sm btn-primary" href="{% url 'naloge:generiraj_delovni_list' delovni_list.id %}">
-                <i class="material-icons material-icons-button">get_app</i>
-                Prenesi
-            </a>
+    <div class="row">
+        <div class="col-md-8">
+            <h2>{{ delovni_list.naslov }}</h2>
+            <p>{{ delovni_list.opis }}</p>
+        </div>
+        <div class="col-md-4">
+            <div class="text-md-right">
+                <a class="btn btn-sm btn-primary" href="{% url 'naloge:urejanje_delovnega_lista' delovni_list.id %}">
+                    <i class="material-icons material-icons-button">create</i>
+                    Uredi
+                </a>
+                <a class="btn btn-sm btn-primary" href="{% url 'naloge:generiraj_delovni_list' delovni_list.id %}">
+                    <i class="material-icons material-icons-button">get_app</i>
+                    Prenesi
+                </a>
+            </div>
         </div>
     </div>
     
-    
-    <p>{{ delovni_list.opis }}</p>
 
     <div id="naloge" class="mb-5">
         {% for naloga in naloge %}
