Dodane akcije za naloge (premakni gor, dol, odstrani nalogo in generiraj nove primere

--- a/nadlogar/naloge/static/naloge/css/style.css
+++ b/nadlogar/naloge/static/naloge/css/style.css
@@ -82,6 +82,7 @@
 
 .naloga .orodna-vrstica .gumb button {
     background: none;
+    width: 100%;
 }
 
 /* Seznam primerov v nalogi ima crke namesto pik */
