--- a/nadlogar/naloge/templates/testi/urejanje_dokumenta.html
+++ b/nadlogar/naloge/templates/testi/urejanje_dokumenta.html
@@ -48,6 +48,8 @@
                 <form action="{% url 'naloge:uredi_nalogo' delovni_list.id %}" method="post" class="uredi-nalogo">
                     {% csrf_token %}
                     <input type="hidden" name="naloga_id" value="{{ naloga.id }}">
+                    <input type="hidden" name="" value="{{ naloga.id }}">
+                    <input type="hidden" name="naloga_navodila" value="{{ naloga.navodila }}">
                     <input type="hidden" name="action" value="">
                     <div class="orodna-vrstica" id="orodna-vrstica">
                         <!-- Akcijski gumbi -->
@@ -87,6 +89,40 @@
         </button>
     </div>
 
+</div>
+
+<div class="modal fade" id="uredi-nalogo-popup" tabindex="-1" role="dialog" aria-labelledby="uredi-nalogo-naslov" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title" id="uredi-nalogo-naslov">Uredi nalogo</h5>
+                
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <form action="{% url 'naloge:dodaj_nalogo' delovni_list.id %}" method="post">
+                {% csrf_token %}
+                <div class="modal-body">
+
+                    <div class="form-group">
+                        <label for="uredi-nalogo-navodila">Navodila naloge</label>
+                        <textarea class="form-control" id="uredi-nalogo-navodila" rows="3" aria-describedby="uredi-nalogo-navodila-pomoc" name="navodila"></textarea>
+                        <small id="uredi-nalogo-navodila-pomoc" class="form-text text-muted">Če pustite to polje prazno, bo za nalogo uporabljeno privzeto besedilo.</small>
+                    </div>
+
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-light" data-dismiss="modal">Prekliči</button>
+                    <button type="submit" class="btn btn-primary">Shrani spremembe</button>
+                </div>
+            </form>
+
+        </div>
+    </div>
 </div>
 
 <div class="modal fade" id="dodaj-nalogo-popup" tabindex="-1" role="dialog" aria-labelledby="dodaj-nalogo-naslov" aria-hidden="true">
