--- a/nadlogar/naloge/templates/testi/urejanje_dokumenta.html
+++ b/nadlogar/naloge/templates/testi/urejanje_dokumenta.html
@@ -78,6 +78,19 @@
                 <div class="primeri">
                     {{ naloga.generator_nalog | naloga_v_html }}
                 </div>
+
+                <div class="text-center">
+                    <form action="{% url 'naloge:uredi_nalogo' delovni_list.id %}" method="post" class="uredi-nalogo">
+                        {% csrf_token %}
+                        <input type="hidden" name="naloga_id" value="{{ naloga.id }}">
+                        <input type="hidden" name="action" value="dodaj_primer">
+                        <button type="submit" class="btn btn-light btn-sm">
+                            <span class="material-icons material-icons-button">add</span>
+                            Dodaj primer
+                        </button>
+                    </form>
+                </div>
+                
             </div>
         {% endfor %}
     </div>
